--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,10 @@ __pycache__/
 
 # Environment variables
 .env
+.env.production
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.dev
+.env.test
 
 # Build directories
 build
