--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
+    "gunicorn>=23.0.0",
     "openai>=1.97.1",
     "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
